#16 переименовал 404 в not-found-page

--- a/src/components/auth-card/auth-card.pug
+++ b/src/components/auth-card/auth-card.pug
@@ -4,7 +4,7 @@ include ../button/button
 mixin authCard()
   .auth-card
     .auth-card__wrap
-      form(action="404.html")
+      form(action="not-found-page.html")
         h2.auth-card__title Войти
         fieldset.auth-card__fieldset
           .auth-card__input-wrap
