--- a/src/components/register-card/register-card.pug
+++ b/src/components/register-card/register-card.pug
@@ -6,7 +6,7 @@ include ../toggle/toggle
 mixin registerCard()
   .register-card
     .register-card__wrap
-      form(action="404.html")
+      form(action="not-found-page.html")
         h2.register-card__title Регистрация аккаунта
         fieldset.register-card__fieldset
           .register-card__input-wrap
