--- a/src/pages/not-found-page/not-found-page.scss
+++ b/src/pages/not-found-page/not-found-page.scss
@@ -9,7 +9,7 @@
 @import '../../components/copyright/copyright.scss';
 @import '../../components/typography/typography.scss';
 
-.not-found {
+.not-found-page {
   background-image: url('./unicorn-r.svg'), url('./unicorn-l.svg');
   background-repeat: no-repeat;
   background-position: 90% center, 10% center;
