--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -5,24 +5,24 @@ include ../main-menu/main-menu
 mixin header(options = {})
   -
     const defaultMenuItems = [
-      { title: "О нас", path: "404.html" },
+      { title: "О нас", path: "not-found-page.html" },
       { 
         title: "Услуги",
-        path: "404.html",
+        path: "not-found-page.html",
         subMenu: [
-          { title: "Подбор отелей", path: "404.html" },
-          { title: "Заказать трансфер", path: "404.html" },
-          { title: "Рейтинг отелей", path: "404.html" }
+          { title: "Подбор отелей", path: "not-found-page.html" },
+          { title: "Заказать трансфер", path: "not-found-page.html" },
+          { title: "Рейтинг отелей", path: "not-found-page.html" }
         ]
       },
-      { title: "Вакансии", path: "404.html" },
-      { title: "Новости", path: "404.html" },
+      { title: "Вакансии", path: "not-found-page.html" },
+      { title: "Новости", path: "not-found-page.html" },
       {
         title: "Соглашения",
-        path: "404.html",
+        path: "not-found-page.html",
         subMenu: [
-          { title: "Пользовательские", path: "404.html" },
-          { title: "Международные", path: "404.html" }
+          { title: "Пользовательские", path: "not-found-page.html" },
+          { title: "Международные", path: "not-found-page.html" }
         ]
       }
     ];
