--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -3,7 +3,7 @@ include ../drop-down-input/drop-down-input
 mixin totalCard()
   section.total-card
     .total-card__wrap
-      form(action="404.html")
+      form(action="not-found-page.html")
         .total-card__head
           h2.total-card__title № #[span 888] #[b люкс]
           p.total-card__per-day #[b 9 990₽] в сутки
