#17 переименовал изображения с номерами отелей

--- a/src/components/hotels/hotels.pug
+++ b/src/components/hotels/hotels.pug
@@ -12,10 +12,10 @@ mixin hotels()
           dayCost: "9 900",
           starCount: 5,
           images: [
-            { src: "./img/hotels/hotel-1.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-1.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-1.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-1.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-1.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-1.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-1.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-1.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -25,10 +25,10 @@ mixin hotels()
           dayCost: "9 900",
           starCount: 4,
           images: [
-            { src: "./img/hotels/hotel-2.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-2.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-2.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-2.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-2.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-2.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-2.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-2.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -39,10 +39,10 @@ mixin hotels()
           dayCost: "8 500",
           starCount: 3,
           images: [
-            { src: "./img/hotels/hotel-3.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-3.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-3.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-3.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-3.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-3.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-3.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-3.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -52,10 +52,10 @@ mixin hotels()
           dayCost: "7 300",
           starCount: 5,
           images: [
-            { src: "./img/hotels/hotel-4.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-4.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-4.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-4.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-4.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-4.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-4.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-4.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -65,10 +65,10 @@ mixin hotels()
           dayCost: "6 000",
           starCount: 4,
           images: [
-            { src: "./img/hotels/hotel-5.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-5.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-5.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-5.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-5.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-5.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-5.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-5.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -78,10 +78,10 @@ mixin hotels()
           dayCost: "5 800",
           starCount: 3,
           images: [
-            { src: "./img/hotels/hotel-6.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-6.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-6.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-6.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-6.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-6.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-6.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-6.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -91,10 +91,10 @@ mixin hotels()
           starCount: 5,
           reviewCount: 45,
           images: [
-            { src: "./img/hotels/hotel-7.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-7.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-7.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-7.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-7.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-7.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-7.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-7.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -104,10 +104,10 @@ mixin hotels()
           starCount: 4,
           reviewCount: 39,
           images: [
-            { src: "./img/hotels/hotel-8.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-8.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-8.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-8.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-8.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-8.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-8.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-8.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -117,10 +117,10 @@ mixin hotels()
           starCount: 3,
           reviewCount: 77,
           images: [
-            { src: "./img/hotels/hotel-9.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-9.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-9.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-9.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-9.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-9.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-9.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-9.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -130,10 +130,10 @@ mixin hotels()
           starCount: 5,
           reviewCount: 25,
           images: [
-            { src: "./img/hotels/hotel-10.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-10.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-10.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-10.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-10.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-10.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-10.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-10.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -143,10 +143,10 @@ mixin hotels()
           starCount: 3,
           reviewCount: 15,
           images: [
-            { src: "./img/hotels/hotel-11.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-11.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-11.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-11.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-11.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-11.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-11.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-11.jpg", alt: "Красивый отель" }
           ]
         },
         {
@@ -156,10 +156,10 @@ mixin hotels()
           starCount: 3,
           reviewCount: 55,
           images: [
-            { src: "./img/hotels/hotel-12.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-12.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-12.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-12.jpg", alt: "Красивый отель" }
+            { src: "./img/hotel-rooms/hotel-room-12.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-12.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-12.jpg", alt: "Красивый отель" },
+            { src: "./img/hotel-rooms/hotel-room-12.jpg", alt: "Красивый отель" }
           ]
         }
       ];
