#17 переименовал hotels в hotel-rooms

--- a/src/pages/rooms/rooms.pug
+++ b/src/pages/rooms/rooms.pug
@@ -1,6 +1,6 @@
 extends ../../layout/main.pug
 include ../../components/filter/filter
-include ../../components/hotels/hotels
+include ../../components/hotel-rooms/hotel-rooms
 
 block variables
   -
@@ -15,4 +15,4 @@ block content
     .container
       .rooms-page__wrap
         +filter()
-        +hotels()
+        +hotel-rooms()
