--- a/src/components/hotel-rooms/hotel-rooms.pug
+++ b/src/components/hotel-rooms/hotel-rooms.pug
@@ -2,7 +2,7 @@ include ../typography/typography
 include ../hotel-card/hotel-card
 include ../pagination/pagination
 
-mixin hotels()
+mixin hotel-rooms()
   -
     const hotels = [
         {
