переименовал изображения hotel

--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -39,10 +39,10 @@ block content
               dayCost: "9 900",
               starCount: 5,
               images: [
-                { src: "img/hotels/hotel-1.jpg", alt: "Красивый отель" },
-                { src: "img/hotels/hotel-1.jpg", alt: "Красивый отель" },
-                { src: "img/hotels/hotel-1.jpg", alt: "Красивый отель" },
-                { src: "img/hotels/hotel-1.jpg", alt: "Красивый отель" }
+                { src: "img/hotel-rooms/hotel-room-1.jpg", alt: "Красивый отель" },
+                { src: "img/hotel-rooms/hotel-room-1.jpg", alt: "Красивый отель" },
+                { src: "img/hotel-rooms/hotel-room-1.jpg", alt: "Красивый отель" },
+                { src: "img/hotel-rooms/hotel-room-1.jpg", alt: "Красивый отель" }
               ]
             })
           .cards-page__item-hotel-wrap
@@ -53,9 +53,9 @@ block content
               dayCost: "9 900",
               starCount: 4,
               images: [
-                { src: "img/hotels/hotel-2.jpg", alt: "Красивый отель" },
-                { src: "img/hotels/hotel-2.jpg", alt: "Красивый отель" },
-                { src: "img/hotels/hotel-2.jpg", alt: "Красивый отель" },
-                { src: "img/hotels/hotel-2.jpg", alt: "Красивый отель" }
+                { src: "img/hotel-rooms/hotel-room-2.jpg", alt: "Красивый отель" },
+                { src: "img/hotel-rooms/hotel-room-2.jpg", alt: "Красивый отель" },
+                { src: "img/hotel-rooms/hotel-room-2.jpg", alt: "Красивый отель" },
+                { src: "img/hotel-rooms/hotel-room-2.jpg", alt: "Красивый отель" }
               ]
             })
