--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,7 +8,7 @@ body {
   height: 100%;
 }
 
-body {
+html {
   font-family: Quicksand, Montserrat, Arial, sans-serif;
   font-size: 14px;
   color: $contentColor;
