--- a/src/layout/ui-kit.pug
+++ b/src/layout/ui-kit.pug
@@ -2,7 +2,7 @@ include ../components/ui-kit-logo/ui-kit-logo
 block variables
 
 <!DOCTYPE html>
-html(lang="ru")
+html(lang="ru" class=pageClass)
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -17,6 +17,6 @@ html(lang="ru")
     link(rel="manifest" href="favicons/site.webmanifest")
     link(rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5")
     title #{title}
-  body(class=pageClass)
+  body
     +uiKitLogo()
     block content
