#13 добавил возможность передавать год копирайта

--- a/src/components/copyright/copyright.pug
+++ b/src/components/copyright/copyright.pug
@@ -1,2 +1,2 @@
-mixin copyright()
-    p.copyright= `Copyright © 2018 Toxin отель. Все права зачищены.`
+mixin copyright(year = "2018")
+    p.copyright= `Copyright © ${year} Toxin отель. Все права зачищены.`
