#13 добавил возможность передавать в логотип alt и href

--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -1,4 +1,6 @@
-mixin logo()
+mixin logo(options = {})
+  - const { altText = "Логотип Токсин", href = "index.html" } = options;
+
   .logo
-    a(class="logo__link" href="index.html")
-      img(class="logo__img" src="img/logo.svg" alt="Логотип Токсин")
+    a(class="logo__link" href=href)
+      img(class="logo__img" src="img/logo.svg" alt=altText)
