--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -23,6 +23,16 @@ block variables
     const pageClass = "form-elements";
 
 block content
+  -
+    const pages = [
+      { title: "1", path: "not-found-page.html", isActive: true },
+      { title: "2", path: "not-found-page.html" },
+      { title: "3", path: "not-found-page.html" },
+      { title: "...", path: "not-found-page.html" },
+      { title: "15", path: "not-found-page.html" },
+      { title: "Далее", path: "not-found-page.html", isNext: true },
+    ];
+
   .container
     .form-elements__wrap
       .form-elements__row
@@ -139,7 +149,7 @@ block content
           .form-elements__button
             div(class="form-elements__title-wrap form-elements__title-wrap_bottom-gap")
               +typography({ text: "Pagination", variant: "h3", hasUpper: true })
-            +pagination()  
+            +pagination(pages)
       .form-elements__row
         .form-elements__row-wrap
           .form-elements__input
