--- a/src/pages/rooms/rooms.pug
+++ b/src/pages/rooms/rooms.pug
@@ -14,7 +14,7 @@ block content
     const defaultHotels = [
       {
         numberHotel: 888,
-        isLuxed: true,
+        isLux: true,
         reviewCount: 145,
         dayCost: "9 900",
         starCount: 5,
@@ -41,7 +41,7 @@ block content
       {
         numberHotel: 980,
         isBtnSliderHide: true,
-        isLuxed: true,
+        isLux: true,
         reviewCount: 35,
         dayCost: "8 500",
         starCount: 3,
