--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -34,7 +34,7 @@ block content
           .cards-page__item-hotel-wrap
             +hotelCard({
               numberHotel: 888,
-              isLuxed: true,
+              isLux: true,
               reviewCount: 145,
               dayCost: "9 900",
               starCount: 5,
