#7 переписал ui-kit-logo

--- a/src/layout/ui-kit.pug
+++ b/src/layout/ui-kit.pug
@@ -18,5 +18,6 @@ html(lang="ru" class=pageClass)
     link(rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5")
     title #{title}
   body
-    +uiKitLogo()
+    .ui-kit-wrap
+      +uiKitLogo()
     block content
