--- a/src/components/ui-kit-logo/ui-kit-logo.pug
+++ b/src/components/ui-kit-logo/ui-kit-logo.pug
@@ -1,4 +1,4 @@
 mixin uiKitLogo()
   .ui-kit-logo
-    .ui-kit-logo__pict
+    img(class="ui-kit-logo__pict" width="48" height="48" src="img/ui-kit-logo.png" alt="Toxin")
     
