--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -41,6 +41,11 @@ html {
   flex-direction: column;
 }
 
+.ui-kit-wrap {
+  padding-top: 30px;
+  padding-left: 30px;
+}
+
 .content {
   flex-grow: 1;
 }
