#12 перенес filter и hotel-rooms в section rooms

--- a/src/pages/rooms/rooms.pug
+++ b/src/pages/rooms/rooms.pug
@@ -1,6 +1,6 @@
 extends ../../layout/main.pug
-include ../../components/filter/filter
-include ../../components/hotel-rooms/hotel-rooms
+include ./sections/filter/filter
+include ./sections/hotel-rooms/hotel-rooms
 
 block variables
   -
