--- a/src/pages/rooms/sections/filter/filter.pug
+++ b/src/pages/rooms/sections/filter/filter.pug
@@ -1,8 +1,8 @@
-include ../typography/typography
-include ../drop-down-input/drop-down-input
-include ../range-slider/range-slider
-include ../checkbox-list/checkbox-list
-include ../expandable-checkbox/expandable-checkbox
+include ../../../../components/typography/typography
+include ../../../../components/drop-down-input/drop-down-input
+include ../../../../components/range-slider/range-slider
+include ../../../../components/checkbox-list/checkbox-list
+include ../../../../components/expandable-checkbox/expandable-checkbox
 
 mixin filter()
   .filter
