--- a/src/pages/rooms/sections/hotel-rooms/hotel-rooms.pug
+++ b/src/pages/rooms/sections/hotel-rooms/hotel-rooms.pug
@@ -1,6 +1,6 @@
-include ../typography/typography
-include ../hotel-card/hotel-card
-include ../pagination/pagination
+include ../../../../components/typography/typography
+include ../../../../components/hotel-card/hotel-card
+include ../../../../components/pagination/pagination
 
 mixin hotelRooms()
   -
