--- a/src/pages/rooms/rooms.scss
+++ b/src/pages/rooms/rooms.scss
@@ -1,7 +1,7 @@
 @import '../../style/utils/variables.scss';
 @import '../../components/header/header.scss';
-@import '../../components/filter/filter.scss';
-@import '../../components/hotel-rooms/hotel-rooms.scss';
+@import './sections/filter/filter.scss';
+@import './sections/hotel-rooms/hotel-rooms.scss';
 @import '../../components/button/button.scss';
 @import '../../components/main-menu/main-menu.scss';
 @import '../../components/date-wishes/date-wishes.scss';
